added views folder to house handlebar files for displaying dynamic pages. removed unnecessary html files.

--- a/web-server/views/about.hbs
+++ b/web-server/views/about.hbs
@@ -4,12 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HELP!</title>
+  <title>Out and...</title>
   <link rel="stylesheet" href="/css/styles.css">
 </head>
 
 <body>
-  <h1>I need somebody.</h1>
+  <h1>{{title}}</h1>
+  <img src="/img/hackermans.jpeg" />
+  <p>Created by: {{name}}</p>
 
 </body>
 
