--- a/web-server/views/help.hbs
+++ b/web-server/views/help.hbs
@@ -4,13 +4,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Out and...</title>
+  <title>HELP!</title>
   <link rel="stylesheet" href="/css/styles.css">
 </head>
 
 <body>
-  <h1>It's ABOUT time, y'all.</h1>
-  <img src="/img/hackermans.jpeg" />
+  <h1>I need somebody.</h1>
+  <p>{{message}}</p>
 
 </body>
 
