--- a/web-server/views/index.hbs
+++ b/web-server/views/index.hbs
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
 
 <head>
-  <title>Bob Newhart's Big Feet</title>
   <link rel="stylesheet" href="/css/styles.css">
   <script src="/js/app.js"></script>
 </head>
 
 <body>
-  <h1>From a static file</h1>
+  <h1>{{title}}</h1>
+  <p>Created by: {{name}}</p>
+
 </body>
 
 </html>
