--- a/web-server/templates/views/about.hbs
+++ b/web-server/templates/views/about.hbs
@@ -9,10 +9,10 @@
 </head>
 
 <body>
-  <h1>{{title}}</h1>
+  {{>header}}
   <img src="/img/hackermans.jpeg" />
-  <p>Created by: {{name}}</p>
 
+  {{>footer}}
 </body>
 
 </html>
