--- a/web-server/templates/views/404.hbs
+++ b/web-server/templates/views/404.hbs
@@ -4,13 +4,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/css/styles.css">
+  <link rel="icon" href="/img/cloud.png">
   <title>I think we're both lost.</title>
 </head>
 
 <body>
-  {{>header}}
+  <div class="main-content">
+    {{>header}}
 
-  <p>{{message}}</p>
+    <p>{{message}}</p>
+  </div>
 
   {{>footer}}
 </body>
