--- a/web-server/templates/views/about.hbs
+++ b/web-server/templates/views/about.hbs
@@ -4,13 +4,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Out and...</title>
   <link rel="stylesheet" href="/css/styles.css">
+  <link rel="icon" href="/img/cloud.png">
+  <title>Out and...</title>
 </head>
 
 <body>
-  {{>header}}
-  <img src="/img/hackermans.jpeg" />
+  <div class="main-content">
+    {{>header}}
+    <img class="portrait" src="/img/hackermans.jpeg" />
+  </div>
 
   {{>footer}}
 </body>
