--- a/web-server/templates/views/help.hbs
+++ b/web-server/templates/views/help.hbs
@@ -4,13 +4,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HELP!</title>
+  <link rel="icon" href="/img/cloud.png">
   <link rel="stylesheet" href="/css/styles.css">
+  <title>HELP!</title>
 </head>
 
 <body>
-  {{>header}}
-  <p>{{message}}</p>
+  <div class="main-content">
+    {{>header}}
+    <p>{{message}}</p>
+  </div>
 
   {{>footer}}
 </body>
