--- a/web-server/templates/views/index.hbs
+++ b/web-server/templates/views/index.hbs
@@ -3,11 +3,17 @@
 
 <head>
   <link rel="stylesheet" href="/css/styles.css">
+  <link rel="icon" href="/img/cloud.png">
   <script src="/js/app.js"></script>
+  <title>Weather'd</title>
 </head>
 
 <body>
-  {{>header}}
+  <div class="main-content">
+    {{>header}}
+
+    <p>WEATHER! GET YOUR WEATHER HEREEEEEE!</p>
+  </div>
 
   {{>footer}}
 </body>
