--- a/web-server/templates/views/index.hbs
+++ b/web-server/templates/views/index.hbs
@@ -4,7 +4,6 @@
 <head>
   <link rel="stylesheet" href="/css/styles.css">
   <link rel="icon" href="/img/cloud.png">
-  <script src="/js/app.js"></script>
   <title>Weather'd</title>
 </head>
 
@@ -13,9 +12,17 @@
     {{>header}}
 
     <p>WEATHER! GET YOUR WEATHER HEREEEEEE!</p>
+
+    <form>
+
+      <input placeholder="Location" />
+      <button>Search</button>
+    </form>
   </div>
 
   {{>footer}}
+
+  <script src="/js/app.js"></script>
 </body>
 
 </html>
