results and errors now displaying. styled all elements.

--- a/web-server/templates/views/index.hbs
+++ b/web-server/templates/views/index.hbs
@@ -14,10 +14,18 @@
     <p>WEATHER! GET YOUR WEATHER HEREEEEEE!</p>
 
     <form>
-
       <input placeholder="Location" />
       <button>Search</button>
     </form>
+
+    <div>
+      <p id='error-message'></p>
+      <p id='full-error'></p>
+    </div>
+    <div>
+      <p id="location"></p>
+      <p id='forecast'></p>
+    </div>
   </div>
 
   {{>footer}}
